--- a/CommentedCode/01-Principles/InferenceMethods.Rmd
+++ b/CommentedCode/01-Principles/InferenceMethods.Rmd
@@ -19,7 +19,7 @@ Assume I'm trying to guess if a coin comes up heads or tails. I have had 10 tria
 
 ```{r}
 trials = 10
-success = 7
+success = 8
 ```
 
 What we want to know now is what my properties are regarding correctly guessing the outcome of the coin flip experiment. 
@@ -102,18 +102,21 @@ line(pbinom(0:10,trials,prob = 0.5, lower.tail = F))
 
 We can get this with the cummulative distribution function in R
 
-```{r}
-pValue <- pbinom(success-1,trials,prob = 0.5, lower.tail = F)
-pValue
-pValue < 0.05
+```{r, eval = F}
+pValue <- pbinom(success,trials,prob = 0.5, lower.tail = F)
 ```
 
-but it is a bit tricky, because depeding on which side one wants to test, you have to add a -1 (because of the definition of the cummulative). So, it's instructive to do it that way, but easier in practice to use the binom.test, which calculates the same values 
+but it is a bit tricky, because depeding on which side one wants to test, you have to add a -1 to the successes becaues of the discrete nature of teh data and the definition of the cummulative in R. You can try, but it's safer in practice to use the binom.test, which calculates the same values 
 
 ```{r}
-binom.test(success,trials,0.5) # two sided 
-binom.test(success,trials,0.5, alternative="greater") # testing for greater
-binom.test(success,trials,0.5, alternative="less") # testing for less
+binom.test(7,trials,0.5) # two sided 
+```
+
+Alternatively:
+
+```{r, eval = FALSE}
+binom.test(7,trials,0.5, alternative="greater") # testing for greater
+binom.test(7,trials,0.5, alternative="less") # testing for less
 ```
 
 ### Side-note: multiple testing
@@ -121,22 +124,25 @@ binom.test(success,trials,0.5, alternative="less") # testing for less
 Imagine there is no effect, but we keep on repeating the test 100 times. How often do you think will we find a significant effect?
 
 ```{r}
-data= rbinom(100,trials,0.5)
+data= rbinom(100,10,0.5)
 pValue <- pbinom(data,trials,prob = 0.5, lower.tail = F)
-mean(pValue < 0.05)
+sum(pValue < 0.05)
 ```
 
-Yes, 5 is what you expect. Of course, if we do the experiment, the exact value will show some variance.
-
-To be exact, in the case of disrecte random distributions, the value doesn't have to be exactly 5%. If you are interested in the reasons, read the comments on this topic at the end of the document. 
+Yes, 5 is what you expect. To be exact, in the case of disrecte random distributions, the value doesn't have to be exactly 5%, but that is a side topic, and here it works. 
 
 The message here is: if you do repeated tests, and you want to maintain a fixed overall type I error rate, you need to adjust the p-values, e.g. by 
 
 ```{r}
 pValueAdjusted <- p.adjust(pValue, method = "hochberg")
-pValueAdjusted
-max(pValueAdjusted < 0.05) == 1
+sum(pValueAdjusted < 0.05)
 ```
+
+Remember: in general, if you choose an alpha level of 5%, and you have absolutely random data, you should get 5% false positives (type I error) assymptotically, and the distribution of p-values in repeated experiments will be flat. 
+
+Also note: we are free to choose the null-hypothesis as we want. What would you do if you null hypothesis is that a coint should have an 0.8 proability of head?
+
+
 
 ### Outcome of a NHST 
 
@@ -196,35 +202,6 @@ abline(v=leftCI, col = "darkgreen", lty = 2, lwd = 2)
 leftCI <- parametervalues[which.min(abs(cumPost - 0.975))]
 abline(v=leftCI, col = "darkgreen", lty = 2, lwd = 2)
 ```
-
-## Additional comments
-
-### Long-term frequencies of errors and multiple testing
-
-Imagine we have a fair coin, and do 1000 experiments with 10 draws, 
-
-
-looking at the p-value, note that we get to the right 5% assumptotically, but not for small data. The fact that it is not exactly 5% is an artifact that appears for discrete distributions (<8 gets acceted, >= 8 rejected, the perfect cut would be intbetween but as we have only discrete options that's not possible to choose)
-
-
-```{r}
-
-par(mfrow=c(2,1))
-trials = 10
-outcome <- rbinom(10000, trials, 0.5)
-hist(pbinom(outcome,trials,0.5), breaks = 100, main = "10 trials, 11 p-values" )
-mean(pbinom(outcome,trials,0.5) < 0.05)
-
-
-trials = 10000
-outcome <- rbinom(10000, trials, 0.5)
-hist(pbinom(outcome,trials,0.5), breaks = 100, main = "10000 trials, p-values flat"  )
-mean(pbinom(outcome,trials,0.5) < 0.05)
-```
-
-remember: in general, if you choose an alpha level of 5%, and you have absolutely random data, you should get 5% false positives (type I error) assymptotically, and the distribution of p-values in repeated experiments will be flat. 
-
-Also note: we are free to choose the null-hypothesis as we want. What would you do if you null hypothesis is that a coint should have an 0.8 proability of head?
 
 
 ---
