mini update MCMC

--- a/CommentedCode/02-Samplers/MCMC/Metropolis.Rmd
+++ b/CommentedCode/02-Samplers/MCMC/Metropolis.Rmd
@@ -72,8 +72,7 @@ plot (seq(3, 7, by=.05), slopelikelihoods , type="l", xlab = "values of slope pa
 
 ## Why we work with logarithms
 
-You might have noticed that I return the logarithm of the probabilities in the likelihood function, which is also the reason why I sum the probabilities of all our datapoints (the logarithm of a product equals the sum of the logarithms). Why do we do this? You don’t have to, but it’s strongly advisable because likelihoods, where a lot of small probabilities are multiplied, can get ridiculously small pretty fast (something like 10^-34). At some stage, computer programs are getting into numerical rounding or underflow problems then. So, bottom-line: when you program something with likelihoods, always use logarithms!!!
-<br />
+You might have noticed that I return the logarithm of the probabilities in the likelihood function, which is also the reason why I sum the probabilities of all our datapoints (the logarithm of a product equals the sum of the logarithms). Why do we do this? You don’t have to, but it’s strongly advisable because likelihoods, where a lot of small probabilities are multiplied, can get ridiculously small pretty fast (something like $10^-34$). At some stage, computer programs are getting into numerical rounding or underflow problems then. So, bottom-line: when you program something with likelihoods, always use logarithms!!!
 
 ## Defining the prior
 
