--- a/CommentedCode/02-Samplers/MCMC/Metropolis.Rmd
+++ b/CommentedCode/02-Samplers/MCMC/Metropolis.Rmd
@@ -37,7 +37,7 @@ sampleSize <- 31
 x <- (-(sampleSize-1)/2):((sampleSize-1)/2)
 # Create dependent values according to ax + b + N(0,sd)
 y <-  trueA * x + trueB + rnorm(n=sampleSize,mean=0,sd=trueSd)
- 
+
 # Plot data
 plot(x,y, main="Test Data")
 ```
@@ -61,10 +61,13 @@ likelihood <- function(param){
     sd = param[3]
      
     pred = a*x + b
+    
     singlelikelihoods = dnorm(y, mean = pred, sd = sd, log = T)
     sumll = sum(singlelikelihoods)
     return(sumll)  
 }
+
+
  
 # Example: plot the likelihood profile of the slope a
 slopevalues <- function(x){return(likelihood(c(x, trueB, trueSd)))}
@@ -84,7 +87,9 @@ As a second step, as always in Bayesian statistics, we have to specify a prior d
 
 * I use wide normal distributions for slope and intercept, a standard choice. If I would have many predictors and therefore the danger of overfitting, one could think about making them more narrow, deliberately biasing them towards 0
 
-* I am using a flat prior on 1/sd^2 (the latter expression is often called the precision), which is a standard non-informative choice for the variance. One would think that a flat prior on the variance would be a better idea, but one can show that this would typically lead to too much probability mass for large variances, effectively introducing a bias in the analysis. NOTE: good uniformative choices for parameters are not neccessarily flat!!!
+* I am using a flat prior on 1/sd^2 (the latter expression is often called the precision), which is a standard non-informative choice for the variance. This then corresponds to a decay of the standard deviation with 1/sqrt(sd).
+
+One would think that a flat prior on the variance would be a better idea, but one can show that this would typically lead to too much probability mass for large variances, effectively introducing a bias in the analysis. NOTE: good uniformative choices for parameters are not neccessarily flat!!!
 
 
 ```{r prior_function}
@@ -95,8 +100,7 @@ prior <- function(param){
     aprior = dnorm(param[1], sd = 50, log = T)
     bprior = dnorm(param[2], sd = 50, log = T)
     
-    precision = 1/param[3]^2
-    sdprior = dunif(precision, min=0, max=30, log = T)
+    sdprior = 1/sqrt(param[3]) + dunif(param[3], min=0, max=30, log = T)
     return(aprior+bprior+sdprior)
 }
 ```
@@ -168,7 +172,7 @@ The first steps of the algorithm may be biased by the initial value, and are the
 
 ```{r, fig.width = 7, fig.height = 7}
 burnin = 5000
-result <- mcmc(chain[burnin:ncol(chain),], start = burnin)
+result <- mcmc(chain[burnin:nrow(chain),], start = burnin)
 ```
 
 The mcmc function is part of the coda R package that provides a number of standard functions for plotting and analysis of the posterior samples. For those functions to work, you need to have your output as an object of class “mcmc”, or “mcmc.list”, which we will discuss later. Coda is the standard package for this type of analysis, and most Bayesian packages in R use this class to return MCMC outputs, so you will likely come across this syntax whatever Bayesian code you are running.
@@ -180,6 +184,7 @@ The advantage of having a coda object is that a lot of things that we typically 
 ```{r}
 plot(result)
 summary(result) 
+rejectionRate(result)
 ```
 
 An interesting statistics provided by summary is the acceptance rate: how often was a proposal rejected by the metropolis-hastings acceptance criterion? The acceptance rate can be influenced by the proposal function: generally, the closer the proposals are, the larger the acceptance rate. Very high acceptance rates, however, are usually not beneficial: this means that the algorithms is “staying” at the same point, which results in a suboptimal probing of the parameter space (mixing). It can be shown that acceptance rates between 20% and 30% are optimal for typical applications (more on that later).
